--- a/dashboard/css/global.css
+++ b/dashboard/css/global.css
@@ -23,7 +23,7 @@ input:is([type="submit"],[type="reset"])[class|='btn']{font-size: 20px; width: 1
 .dashboardPage .leftAside > div > ul > li:not(:last-child){margin-bottom: 30px;}
 .dashboardPage .leftAside > div > ul > li a{display: block;}
 .dashboardPage .leftAside > div > ul > li > a{font-weight: 700; display: flex; align-items: center; position: relative;}
-.dashboardPage .leftAside > div > ul > li > a:only-child:is(:hover , .active){color: #2de09f;}
+.dashboardPage .leftAside > div > ul > li:is(:hover , .active) > a:only-child{color: #2de09f;}
 .dashboardPage .leftAside > div > ul > li > a::before{content: ''; width: 20px; height: 20px; background-repeat: no-repeat; background-position: center; background-size: cover; margin-right: 7px;}
 .dashboardPage .leftAside > div > ul > li:nth-child(1) > a::before{background-image: url('../images/menu-icon01.png');}
 .dashboardPage .leftAside > div > ul > li:nth-child(2) > a::before{background-image: url('../images/menu-icon02.png');}
