문자 보내기 완료 페이지 완료

--- a/dashboard/css/page.css
+++ b/dashboard/css/page.css
@@ -182,3 +182,10 @@
 .messagePage > .basicPage .sendAmount .amountArea ul li button{font-size: 14px; color: white; font-weight: 700; padding: 7px 10px; background-color: #2de09f; border-radius: 6px; margin-left: 10px;}
 .messagePage > .basicPage .sendAmount .amountArea ul li input.inputCase{width: 150px; text-align: right;}
 .messagePage > .basicPage .sendAmount .amountArea ul li *:last-child{font-size: 15px; margin-left: auto;}
+
+/* 문자 보내기 - 완료 */
+.messagePage .finPage{padding: 140px 0 75px; text-align: center;}
+.messagePage .finPage img{max-width: 150px; margin-bottom: 40px;}
+.messagePage .finPage strong{display: block; font-size: 36px; font-weight: 700; margin-bottom: 30px;}
+.messagePage .finPage p{font-size: 15px; font-weight: 400; margin-bottom: 60px;}
+.messagePage .finPage .btn-color{max-width: 230px; margin: 0 auto;}
