--- a/dashboard/css/page.css
+++ b/dashboard/css/page.css
@@ -277,3 +277,21 @@
 .historyPage .sendPage .boardBox li:not(:first-child) a::after , 
 .historyPage .sendPage .boardBox li:first-child *:nth-child(8){width: 52px;}
 .historyPage .sendPage .boardBox li:not(:first-child) a *:nth-child(2){text-align: left; text-decoration: underline;}
+/* 내역 - 전송내역 -상세 */
+.historyPage .send-detailPage h2{margin-bottom: 80px;}
+.historyPage .send-detailPage > div{padding-right: 410px; font-size: 15px;}
+.historyPage .send-detailPage > div b{font-weight: 700;}
+.historyPage .send-detailPage > div .infoArea{padding: 30px 40px 30px 50px; display: flex; border: 1px solid #dedede; margin-bottom: 49.5px;}
+.historyPage .send-detailPage > div .infoArea > div{width: 78px; display: flex; flex-direction: column; justify-content: center; text-align: center;}
+.historyPage .send-detailPage > div .infoArea > div b{margin-bottom: 15px;}
+.historyPage .send-detailPage > div .infoArea > div time{line-height: 20px;}
+.historyPage .send-detailPage > div .infoArea > ul{flex: 1; padding-left: 49.5px; margin-left: 49.5px; border-left: 1px solid #dedede;}
+.historyPage .send-detailPage > div .infoArea > ul li{display: flex; justify-content: space-between; align-items: center;}
+.historyPage .send-detailPage > div .infoArea > ul li:not(:last-child){margin-bottom: 15px;}
+.historyPage .send-detailPage > div .boardBox{text-align: center;}
+.historyPage .send-detailPage > div .boardBox li{padding: 0 30px;}
+.historyPage .send-detailPage > div .boardBox li *:nth-child(1){width: 20px; margin-right: 80px;}
+.historyPage .send-detailPage > div .boardBox li *:nth-child(2){width: 94px; margin-right: 70px;}
+.historyPage .send-detailPage > div .boardBox li *:nth-child(3){width: 58px; margin-right: 40px;}
+.historyPage .send-detailPage > div .boardBox li *:nth-child(4){width: 26px; margin-right: 50px;}
+.historyPage .send-detailPage > div .boardBox li *:nth-child(5){width: 52px;}
